2002-10-19  Duncan Mak  <duncan@ximian.com>

	* glib/Source.cs: Added.

2002-10-19  Miguel de Icaza  <miguel@ximian.com>

	* glib/Object.cs: Added operator != and operator == overloads.

2002-10-19  Rachel Hestilow <hestilow@ximian.com>

	* gconf, sample/gconf: Added.
	
	* glue/combo.c: This was never added, add it now.

	* configure.in, makefile, sample/Makefile.in: Build new
	gconf bindings if gnome is enabled.
	
2002-10-14  Mike Kestner <mkestner@speakeasy.net>

	* glib/Object.cs (GetObject): remove (int) cast

2002-10-11  Martin Baulig  <martin@gnome.org>

	* gtk/Combo.custom: New file.
	(Combo.SetPopdownStrings): New method to set the popdown strings
	from a string array.

2002-10-11  Martin Baulig  <martin@gnome.org>

	* glib/ListBase.cs (ListBase.Append): New public method.
	(ListBase.Prepend): New public method.

2002-10-11  Martin Baulig  <martin@gnome.org>

	* glib/FileUtils.cs: New file.  Wrapped g_file_get_contents() here.

2002-10-10  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : some fixes
	* generator/Parameters.cs (CreateSignature): handle void params

2002-10-10  Miguel de Icaza  <miguel@ximian.com>

	* gtk/ThreadNotify.cs: Avoid multiple notifications.

2002-10-09  Miguel de Icaza  <miguel@ximian.com>

	* glue/adjustment.c (gtksharp_gtk_adjustment_get_page_size): Added
	the glue.

	* gtk/Adjustment.custom: Added some more methods

2002-10-08  Kristian Rietveld  <kris@gtk.org>

	(So Miguel told me just to go ahead and commit -kris)

	* gtk/TreeSelection.custom: new file, defines a working
	GetSelected method (GetSelected is a bit tricky function).

	* generator/InterfaceGen.cs (Generate): also call AppendCustom

	* sources/Gtk.metadata: hide the autogenerated
	Gtk.TreeSelection.GetSelected method.

2002-10-08  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Point.custom: Use (x,y) instead.
	
	* gdk/Color.custom: Use the X rgb color format specification.

	* gdk/Rectangle.custom: Use the X geometry format for Rectangles.
