@@ -218,12 +218,38 @@ namespace GLib {
 
 		public static bool operator == (Object a, Object b)
 		{
-			return a.Equals (b);
+			object oa = a;
+			object ob = b;
+
+			if (ob == null){
+				if (oa == null)
+					return true;
+				else
+					return false;
+			} else {
+				if (oa == null)
+					return false;
+				else
+					return a.Equals (b);
+			}
 		}
 
 		public static bool operator != (Object a, Object b)
 		{
-			return !a.Equals (b);
+			object oa = a;
+			object ob = b;
+
+			if (ob == null){
+				if (oa == null)
+					return false;
+				else
+					return true;
+			} else {
+				if (oa == null)
+					return true;
+				else
+					return !a.Equals (b);
+			}
 		}
 		
 		/// <summary>
