@@ -1,3 +1,8 @@
+2002-10-20  Miguel de Icaza  <miguel@ximian.com>
+
+	* glib/Object.cs: Avoid recursive calls with the previous operator
+	!= and operator ==
+
 2002-10-19  Duncan Mak  <duncan@ximian.com>
 
 	* glib/Source.cs: Added.
